# Data-engineering

./: CHANGELOG.md  config.py  data.txt  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.py  youtube-watcher.py
DataWarehousing/: readme.md
configs/: yt_config.py
growwdataskills/kafka/: config.py  consumer.py  producer.py
kafka/: consumer.py  kafka_config.py  m.py  producer.py  reatil_data_avro_schema.json
pyspark/: interview-questions.md  misc.md  notes.md
sql/: execute-sql.py
week1/docker/: aingest-data.py  docker-compose.yml  ingest-data.py  pipeline.py  postgres-command.md  upload-data.ipynb
week1/terraform/: terraform.tfstate  variables.tf
week1/terraform/.terraform/: terraform.tfstate
youtube-watcher/: youtube-watcher.py
zoomcamp/week1/docker/: Dockerfile  aingest-data.py  ingest-data.py  pipeline.ipynb  pipeline.py
zoomcamp/week1/terraform/: main.tf
