[project]
name = "data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.9.0",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
